screen.less
---
---

/* Colors */

@background-color: #edf1f3;
@text-color: #222;
@link-color: #336699;
@title-color: #336699;

/* Fonts */

@font-face {
font-family: 'UniversalisADFStdRegular';
src: url('/f/UniversalisADFStd-Regular.eot');
src: local('Universalis ADF Std'), local('UniversalisADFStd-Regular'), url('/f/UniversalisADFStd-Regular.woff') format('woff'), url('/f/UniversalisADFStd-Regular.otf') format('opentype');
}
@font-face {
font-family: 'UniversalisADFStdOblique';
src: url('/f/UniversalisADFStd-Oblique.eot');
src: local('Universalis ADF Std'), local('UniversalisADFStd-Oblique'), url('/f/UniversalisADFStd-Oblique.woff') format('woff'), url('/f/UniversalisADFStd-Oblique.otf') format('opentype');
}
@font-face {
font-family: 'UniversalisADFStdBold';
src: url('/f/UniversalisADFStd-Bold.eot');
src: local('Universalis ADF Std'), local('UniversalisADFStd-Bold'), url('/f/UniversalisADFStd-Bold.woff') format('woff'), url('/f/UniversalisADFStd-Bold.otf') format('opentype');
}

/* Layout */

body {
    font: normal medium 'OFL Sorts Mill Goudy TT','Gill Sans','Gill Sans MT',sans-serif;
    margin: 1.75em auto;
    width: 40em;
    line-height: 1.75;
    word-spacing: 0.1em;
    background-color: white
}

nav ul {
    margin: 0px;
    padding: 0px 1em 0px 0px;
    text-align: center;
}

nav li {
    display: inline;
    padding-left: 1em;
    font: normal medium UniversalisADFStdRegular;
    font-weight: bolder;
    letter-spacing: -1px;
    font-size: 20px;
    line-height: 22px;
}

a {
    color: @link-color;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

a img { border-width: 0; }

blockquote {
  border-left: 1px solid @text-color;
  line-height: 18px;
  font-size: 11pt;
  font-style: italic;
  margin: 20px;
  padding-left: 10px;
}

code {
  font-family: 'DejaVu Sans Mono', 'Courier New', monospace;
  font-size: 12pt;
}

h1, h2, h3 {
    font: normal medium UniversalisADFStdRegular;
    font-weight: bolder;
    letter-spacing: -1px;
}

h1 {
  font-size: 30px;
  line-height: 36px;
  margin-bottom: 18px;
  color: @link-color;
}

h2 {
  font-size: 24px;
  line-height: 22px;
  margin-bottom: 18px;
}

h3 {
  font-size: 20px;
  line-height: 22px;
}

li { margin-bottom: 4px; }

p, ul, ol { margin-bottom: 18px; }

ul, ol {
  margin-left: 2em;
}

ul { list-style-type: square; }

/* html5 */
header, footer, nav, article { display: block; }

article {
    border-bottom: 1px solid @text-color;
    margin-bottom: 20px;
}

article.index {
    border-bottom: 0;
}

article p {
    font-size: 13pt;
    line-height: 26px;
}

#title, #post_title, #archive, #about { color: @title-color; }

#title {
    font-size: 32pt;
}

#post_title, #archive, #about {
    font-size: 24pt;
}

/* Archive */

ol.archive {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

/* Pagination */

div.paginator
{
  margin: 3em 0;
  width: 100%
}

div.left_column,
div.right_column
{
  width: 25%;
}

div.left_column
{
  float: left;
}

div.center_column
{
  float: left;
  width: 50%;
  text-align: center;
}

div.right_column
{
  float: right;
  text-align: right;
}

/* Form */

form fieldset 
{
  padding: 0;
  margin: 0;
  border: none;
}

/* reset */
.clear {clear: both;display: block;overflow: hidden;visibility: hidden;width: 0;height: 0;}.clearfix:after {clear: both;content: ' ';display: block;font-size: 0;line-height: 0;visibility: hidden;width: 0;height: 0;}* html .clearfix {height: 1%;}
/*
.clear { clear: both }
*/

